crates/rstest-bdd-macros/tests/ui/placeholder_missing_param.rs
use rstest_bdd_macros::given;

#[given("a number {count:u32}")]
fn step() {}

fn main() {}
